--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -19,16 +19,16 @@
   </div>
 <% else %>
   <div class="center hero-unit">
-    <h1>Welcome to the Sample App</h1>
+    <h1>Welcome to the Sample Twitter</h1>
 
     <h2>
       This is the home page for the
-      <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-      sample application.
+      <a href="https://www.facebook.com/profile.php?id=1244455717">Naresh facebook profile</a>
+      Sample Twitter
     </h2>
 
     <%= link_to "Sign up now!", signup_path,  class: "btn btn-large btn-primary" %>
   </div>
 
-  <%= link_to image_tag("naresh.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+  <%= link_to image_tag("naresh.png", alt: "Rails"), 'https://www.facebook.com/profile.php?id=1244455717' %>
 <% end %> 
